# kit-mcp

./: .env.example  README.md  pyproject.toml
src/: _client.py  server.py
src/kit/: __init__.py  tools.py
